<resources>
    <string name="app_name">MonetizeCalendar</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="clip_notification_title">%1$s</string>
    <string name="clip_notification_copy_button">Copy</string>
    <string name="clip_notification_share_button">Share</string>
    <string name="clip_notification_big_title">Recent clipboards</string>
    <string name="toast_copied">%1$s has copied</string>
    <string name="clip_notification_text">Expand to show more.</string>
    <string name="clip_notification_single_text">Click to add text.</string>
    <string name="share_clipboard_to">Share text to…</string>
    <string name="title_activity_main">"Clip Stack"</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search…</string>
    <string name="title_activity_activity_setting">Settings</string>
    <string name="date_format">EEE, MMM dd</string>
    <string name="time_format">HH:mm</string>
    <string name="time_format_with_second">HH:mm:ss</string>
    <string name="title_activity_activity_editor">Edit</string>
    <string name="action_share">Share</string>
    <string name="action_save">Saved</string>
    <string name="action_cancel">Cancel</string>
    <string name="toast_deleted">Deleted.</string>
    <string name="action_refresh">Refresh</string>
    <string name="toast_saved">Saved.</string>
    <string name="toast_no_saved">Not saved.</string>
    <string name="pref_storage_title">Storage</string>
    <string name="pref_storage_dialog">Remember clipboards for:</string>
    <string name="pref_about_category">About</string>
    <string name="pref_about_title">Open Source</string>
    <string name="pref_about_summary">View source code on GitHub.</string>
    <string name="pref_app_setting_category">App Settings</string>
    <string name="pref_service_title">Service</string>
    <string name="pref_service_summary">Listen system clipboard in background.</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_pin_title">Pin Notification</string>
    <string name="pref_notification_pin_summary_on">Always show.</string>
    <string name="pref_notification_pin_summary_off">Only show when clipboard changed.</string>
    <string name="action_delete">Delete</string>
    <string name="pref_storage_summary_infinite">Remember clipboards forever.</string>
    <string name="pref_storage_summary_days">Remember clipboards for %d days.</string>
    <string name="title_activity_editor">New Clip</string>
    <string name="first_launch_clipboards_0">Welcome to Clip Stack. %1$s</string>
    <string name="first_launch_clipboards_1">It can show clipboard history in notification.</string>
    <string name="first_launch_clipboards_2">Click here %1$s to edit.</string>
    <string name="first_launch_clipboards_3">%1$s Swipe to delete. %2$s</string>
    <string name="title_activity_activity_get_share_text">Copy to clipboard</string>
    <string name="action_add">Add</string>
    <string name="action_delete_all">Clear all</string>
    <string name="dialog_delete_all">Are you sure you want to clear all?\nStarred items will be retained.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="toast_undo">Undo</string>
    <string name="backup_file_name">"Clip Stack Backup "</string>
    <string name="backup_file_name_old">"Clipping Now Backup "</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="export_success">Export success: </string>
    <string name="export_failed">Export failed. Maybe no SD-card or it\'s full.</string>
    <string name="dialog_date_piker_from">From date:</string>
    <string name="dialog_date_piker_to">To date:</string>
    <string name="pref_notification_summary_on">Show notification.</string>
    <string name="pref_notification_summary_off">Don\'t show any notification.</string>
    <string name="title_activity_backup">Backup</string>
    <string name="switch_reverse_sort">Reverse sort</string>
    <string name="action_backup">Backup</string>
    <string name="dialog_description_are_you_sure">Are you sure?</string>
    <string name="progress_importing">Importing…</string>
    <string name="title_activity_new_backup">New Backup</string>
    <string name="title_backups">Backups</string>
    <string name="action_new_backup">New Backup</string>
    <string name="empty_card">No backup</string>
    <string name="toast_find_backup">%1$s backups in %2$s</string>
    <string name="clip_notification_text_old">Click to show more.</string>
    <string name="arrays_one_day">1 day</string>
    <string name="arrays_three_days">3 days</string>
    <string name="arrays_seven_days">7 days</string>
    <string name="arrays_thirty_days">30 days</string>
    <string name="arrays_infinite">infinite</string>
    <string name="clip_notification_starred_single_text">There is no starred items.</string>
    <string name="pref_storage_summary">Set clipboard history limit.</string>
    <string name="pref_rate_title">Rate me</string>
    <string name="pref_rate_summary">Rate this app if you think it\'s useful.</string>
    <string name="pref_notification_priority_title">Notification Priority</string>
    <string name="pref_notification_priority_summary">Set notification priority.</string>
    <string name="pref_click_title">Click Action</string>
    <string name="pref_click_summary">Set click &amp; long click actions.</string>
    <string name="pref_click_summary_false">Click to edit. Long click to copy.</string>
    <string name="pref_click_summary_true">Click to copy. Long click to edit.</string>
    <string name="pref_notification_priority_low">\nLow - without status bar icon.\nAt the end of notifications.\n</string>
    <string name="pref_notification_priority_middle">Middle - with status bar icon.\nAt the middle of notifications.</string>
    <string name="pref_notification_priority_high">\nHigh - with status bar icon.\nAt the top of notifications.\n</string>
    <string name="switch_only_starred_items">Only starred clipboards</string>
    <string name="switch_all_items">All clipboards</string>
    <string name="toast_service_temproray_stop">Temporary stopped</string>
    <string name="toast_service_temproray_resume">Resumed</string>
    <string name="title_section1">Vertical List</string>
    <string name="title_section2">Horizontal List</string>
    <string name="title_section3">Vertical Grid</string>
    <string name="title_section4">Vertical Staggered Grid</string>
    <string name="title_section5">Fixed Two-Way List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="no_description">(no description)</string>
    <string name="retrieving_events">Retrieving events…</string>
    <string name="error_retrivieving">Error retrieving events!</string>
    <string name="no_events">No upcoming events found.</string>
    <string name="updated">Your upcoming events were retrieved</string>
    <string name="account_unspecified">Account unspecified.</string>
    <string name="no_network">No network connection available.</string>
    <string name="google_play_services">Google Play Services required: after installing, close and relaunch this app.</string>
    <string name="contact_selected">Marked contact</string>
    <string name="contact_picture">contact picture</string>
    <string name="event_date">Event Date</string>
    <string name="photo">photo contact</string>
    <string name="event_cancel">Event cancel</string>
    <string name="event_concluded">Event concluded</string>
    <string name="empty">Empty</string>
    <string name="events">Events</string>
    <string name="contacts">Contacts</string>
    <string name="edit_contacts">Edit Contacts</string>
    <string name="periodic_charge">Periodic time of charge:</string>
    <string name="montly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="per_class">Per class</string>
    <string name="per_hour">Per Hour</string>
    <string name="invoice">Invoice</string>
    <string name="error_retrieving_invoice">Error retrivieview your invoice.</string>
    <string name="no_new_invoices">No new invoices.</string>
    <string name="new_invoices">New invoices created.</string>
    <string name="account_choosed">Account choosed:</string>
    <string name="help_contact"><![CDATA[Help & Contact]]></string>
    <string name="wait_contacts">Wait here while reading your contacts.</string>
    <string name="contacts_arrived">Your contacts has arrived</string>
    <string name="no_contacts">No new contacts</string>
    <string name="error_retrieving_contacts">Error retrieving your contacts</string>


</resources>
